--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -1,1 +1,478 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vinay - amazing portfolio(Web developer)</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      /* Adding style to body */
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
+      body {
+        background-color: #faf7f0;
+        color: white;
+        font-family: "Poppins", sans-serif;
+      }
+
+      /* Base Styles */
+      header {
+        background-color: #d8d2c2;
+        padding: 20px 0;
+        width: 100%;
+      }
+
+      nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between; /* Ensures equal spacing across header */
+        padding: 0 20px;
+      }
+
+      /* Left Section (Vinay's Portfolio) */
+      nav .left {
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: #ffffff;
+        flex-shrink: 0; /* Prevents it from shrinking on small screens */
+      }
+
+      /* Right Section (Navigation Links) */
+      nav .right {
+        flex-grow: 1; /* Allows the right section to take up remaining space */
+      }
+
+      nav .right ul {
+        display: flex;
+        justify-content: space-around; /* Ensures equal spacing between each link */
+        list-style: none;
+        width: 100%; /* Allows the links to spread across the full width */
+        padding: 0;
+        margin: 0;
+      }
+
+      nav .right ul li {
+        flex-grow: 1; /* Each link will take equal space */
+        text-align: center; /* Center the text inside each link */
+      }
+
+      nav .right ul li a {
+        text-decoration: none;
+        color: #b17457;
+        font-size: 1.2rem;
+        padding: 10px 0;
+      }
+
+      nav .right ul li a:hover {
+        color: rgb(153, 153, 226);
+      }
+
+      /* Responsive Behavior */
+
+      /* Tablet Screens (max-width: 768px) */
+      @media (max-width: 768px) {
+        nav {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        nav .right ul {
+          width: 100%; /* Full width for better spacing */
+          justify-content: space-around; /* Ensures even spacing */
+        }
+
+        nav .left {
+          margin-bottom: 20px;
+        }
+      }
+
+      /* Mobile Devices (max-width: 480px) */
+      @media (max-width: 480px) {
+        nav {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        nav .right ul {
+          flex-direction: column; /* Stack the links vertically */
+          align-items: center;
+          width: auto; /* Auto width for vertical alignment */
+        }
+
+        nav .left {
+          font-size: 1.3rem;
+        }
+
+        nav .right ul li a {
+          font-size: 1rem;
+        }
+      }
+
+      /* Base Styles */
+      .firstSection {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 100px 0;
+        color: #3c3d37;
+        padding: 20px;
+      }
+
+      .firstSection > div {
+        width: 45%;
+      }
+
+      /* Left Section Text Styling */
+      .leftSection {
+        font-size: 3rem;
+        color: #3c3d37;
+      }
+
+      .leftSection span.purple {
+        color: #b17457;
+      }
+
+      #element {
+        color: #6cbec7;
+        font-size: 2.5rem;
+      }
+
+      /* Right Section Image Styling */
+      .rightSection img {
+        width: 100%;
+        height: auto;
+        max-width: 500px;
+      }
+
+      /* Media Queries for Tablet (max-width: 768px) */
+      @media (max-width: 768px) {
+        .firstSection {
+          flex-direction: column;
+          text-align: center;
+          padding: 20px;
+        }
+
+        .leftSection {
+          font-size: 2.5rem;
+        }
+
+        #element {
+          font-size: 2rem;
+        }
+
+        /* Reduce image size for tablets */
+        .rightSection img {
+          width: 80%;
+          max-width: 350px;
+          margin-top: 20px;
+        }
+      }
+
+      /* Media Queries for Mobile Devices (max-width: 480px) */
+      @media (max-width: 480px) {
+        .firstSection {
+          flex-direction: column;
+          text-align: center;
+          padding: 10px;
+        }
+
+        .leftSection {
+          font-size: 1.5rem;
+        }
+
+        #element {
+          font-size: 1.2rem;
+        }
+
+        /* Further reduce image size for mobile devices */
+        .rightSection img {
+          width: 70%;
+          max-width: 250px;
+          margin-top: 10px;
+        }
+      }
+
+      /* Overall Section Styles */
+      .secondSection {
+        max-width: 90vw;
+        margin: auto;
+        padding: 40px 0;
+        text-align: center;
+      }
+
+      .secondSection h1 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+      }
+
+      .text-gray {
+        color: gray;
+        font-size: 1.2rem;
+      }
+
+      /* Box containing the vertical items */
+      .box {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
+        gap: 40px; /* Space between columns */
+        justify-content: space-between;
+        align-items: flex-start;
+      }
+
+      /* Vertical Sections for each skill */
+      .vertical {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .image-top,
+      .image-topTwo,
+      .image-topThree {
+        width: 60px;
+        margin-bottom: 20px;
+      }
+
+      /* Titles */
+      .vertical-title,
+      .vertical-titleTwo,
+      .vertical-titleThree {
+        font-size: 1.2rem;
+        font-weight: bold;
+        color: #001f3f;
+        margin-bottom: 10px;
+      }
+
+      /* Descriptions */
+      .vertical-desc,
+      .vertical-descTwo,
+      .vertical-descThree {
+        font-size: 1rem;
+        color: #16423c;
+      }
+
+      .vertical-desc ul,
+      .vertical-descTwo ul,
+      .vertical-descThree ul {
+        list-style: none;
+        padding: 0;
+        margin: 10px 0 0;
+        color: #16423c;
+      }
+
+      footer {
+        background-color: #6c4e31;
+        padding: 20px;
+        text-align: center;
+        color: #fff;
+      }
+
+      .footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 20px 0;
+      }
+
+      .footer-second {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 50px; /* Space between logos */
+      }
+
+      /* Separate classes for each logo */
+      .github-logo {
+        width: 120px;
+        height: 120px;
+        object-fit: contain;
+        transition: transform 0.3s ease;
+      }
+
+      .linkedin-logo {
+        width: 120px;
+        height: 120px;
+        opacity: 0.7;
+        object-fit: contain;
+        transition: transform 0.3s ease;
+      }
+
+      .github-logo:hover,
+      .linkedin-logo:hover {
+        transform: scale(1.1);
+      }
+
+      .footer-rights {
+        margin-top: 20px;
+        font-size: 0.9rem;
+        color: #9c97f1;
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        .footer-second {
+          gap: 30px;
+        }
+
+        .github-logo,
+        .linkedin-logo {
+          width: 100px;
+          height: 100px;
+        }
+
+        .footer-rights {
+          font-size: 0.8rem;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .footer-second {
+          gap: 20px;
+        }
+
+        .github-logo,
+        .linkedin-logo {
+          width: 80px;
+          height: 80px;
+        }
+
+        .footer-rights {
+          font-size: 0.75rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="left">Vinay's Portfolio</div>
+        <div class="right">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section class="firstSection">
+        <div class="leftSection">
+          Hi, my name is <span class="purple">Vinay</span>
+          <div>and I am a passionate</div>
+          <span id="element"></span>
+        </div>
+        <!-- Adding developer symbol png -->
+        <div class="rightSection"><img src="PngItem_5311716.png" /></div>
+      </section>
+
+      <hr />
+
+      <section class="secondSection">
+        <span class="text-gray">What I have done so far</span>
+        <h1 style="color: #001f3f">Work Experience</h1>
+
+        <div class="box">
+          <div class="vertical">
+            <!-- Adding html logo -->
+            <img class="image-top" src="html logo png.png" alt="" />
+            <div class="vertical-title">
+              Mastering HTML(21 APRIL, 2024 - 21 MAY, 2024)
+            </div>
+            <div class="vertical-desc">
+              I Learnt :-
+              <ul>
+                <li>HTML Basics</li>
+                <li>Semantic Tags & Non-Semantic Tags</li>
+                <li>Layouts</li>
+                <li>Block Elements & Inline Elements</li>
+                <li>Form</li>
+                <li>Table</li>
+              </ul>
+            </div>
+          </div>
+          <div class="vertical">
+            <!-- Adding css logo -->
+            <img class="image-topTwo" src="css-logo.png" alt="" />
+            <div class="vertical-titleTwo">
+              Mastering CSS(25 MAY, 2024 - 20 JUNE, 2024)
+            </div>
+            <div class="vertical-descTwo">
+              I Learnt :-
+              <ul>
+                <li>CSS Basics</li>
+                <li>Selectors</li>
+                <li>Units</li>
+                <li>Positions</li>
+                <li>Flexbox</li>
+                <li>Z-index</li>
+              </ul>
+            </div>
+          </div>
+          <div class="vertical">
+            <!-- Adding js logo -->
+            <img class="image-topThree" src="js logo.png" alt="" />
+            <div class="vertical-titleThree">
+              Mastering JS(22 JUNE, 2024 - 21 AUGUST, 2024)
+            </div>
+            <div class="vertical-descThree">
+              I Learnt :-
+              <ul>
+                <li>JS Basics</li>
+                <li>Datatypes</li>
+                <li>Operators</li>
+                <li>Array</li>
+                <li>Function</li>
+                <li>API</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer">
+        <div class="footer-second">
+          <!-- GitHub logo -->
+          <a href="https://github.com/" target="_main">
+            <img src="github logo.png" alt="GitHub Logo" class="github-logo" />
+          </a>
+          <!-- LinkedIn logo -->
+          <a href="https://www.linkedin.com/feed/">
+            <img
+              src="linkedin logo.png"
+              alt="LinkedIn Logo"
+              class="linkedin-logo"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="footer-rights">
+        <!-- Adding copyright symbol -->
+        Copyright &#169; vinaysportfolio.com | All rights reserved
+      </div>
+    </footer>
+
+    <!-- Adding typed.js here -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+      var typed = new Typed("#element", {
+        strings: ["Web Developer", "Video Editor."],
+        typeSpeed: 50,
+      });
+    </script>
+  </body>
+</html>
