--- a/project 6 - music website by do some coding/index.html
+++ b/project 6 - music website by do some coding/index.html
@@ -68,20 +68,22 @@
         </div>
       </section>
 
-      <section class="about-music container">
-        <h3>The movie and TV collection you always wished for. Granted.</h3>
-        <p>
-          With over 100,000 movies and TV shows to choose from, there’s always
-          something great to watch on myTunes and if you watch on Orange TV 4K,
-          you’ll be able to enjoy a tremendous selection of your favorite
-          content in 4K HDR. So get ready to enjoy episodes of your favorite TV
-          shows or hit movies you’ve been waiting to see — anytime, anywhere.
-          Just tap to play, or even download if you’re going somewhere you won’t
-          have Wi-Fi.
-        </p>
-        <button class="secondary-btn">Read More</button>
-        <div class="mac-img">
-          <img src="mac.png" alt="macbook" />
+      <section class="about-music">
+        <div class="container">
+          <h3>The movie and TV collection you always wished for. Granted.</h3>
+          <p>
+            With over 100,000 movies and TV shows to choose from, there’s always
+            something great to watch on myTunes and if you watch on Orange TV
+            4K, you’ll be able to enjoy a tremendous selection of your favorite
+            content in 4K HDR. So get ready to enjoy episodes of your favorite
+            TV shows or hit movies you’ve been waiting to see — anytime,
+            anywhere. Just tap to play, or even download if you’re going
+            somewhere you won’t have Wi-Fi.
+          </p>
+          <button class="secondary-btn">Read More</button>
+          <div class="mac-img">
+            <img src="mac.png" alt="macbook" />
+          </div>
         </div>
       </section>
 
@@ -149,7 +151,7 @@
             </ul>
           </div>
           <div class="footer-links">
-            <h4>Education & Business1</h4>
+            <h4>Education & Business</h4>
             <ul>
               <li>Orange & Education</li>
               <li>Shop for College</li>
