--- a/project 6 - music website by do some coding/index.html
+++ b/project 6 - music website by do some coding/index.html
@@ -121,7 +121,9 @@
             </p>
             <p>Already have an Orange MyTunes Music Gift Card ?</p>
             <hr />
-            <div><button class="secondary-btn">Redeem</button></div>
+            <div class="ok-btn">
+              <button class="secondary-btn">Redeem</button>
+            </div>
           </div>
         </section>
       </div>
